Changed cards into checkmark table and added more categories. Sizing issue still needs to be fixed.

--- a/styles/sections/s7.css
+++ b/styles/sections/s7.css
@@ -33,6 +33,15 @@
     font-size:125%;
 }
 
+#membership table, th, td {
+    border: 1px solid white;
+    border-collapse: collapse;
+  }
+
+#membership th, td {
+    padding: 5px;
+  }
+
 #membership button {
     position: relative;
     margin: auto;
